updating location and time

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: workshop
 root: .
 venue: University of Miami (R)      # brief name of host site without address (e.g., "Euphoric State University")
-address: FIXME    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+address: Rosenstiel School of Marine and Atmospheric Science (RSMAS) campus, Library Map and Chart Room, 4600 Rickenbacker Causeway (Locator: VK), Miami, FL 33149    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: us    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: en   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: FIXME     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+latlng: 25.732467,-80.163144     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: Nov 19-20, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: FIXME  # human-readable time (e.g., "9:00 am - 4:30 pm")
+humantime: 8:30 am - 4:30 pm  # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-11-19  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2015-11-20    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Kate Hertweck", "Nicole Bennett"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: []     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: SKhuri@med.miami.edu    # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
