--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: workshop
 root: .
 venue: University of Miami (R)      # brief name of host site without address (e.g., "Euphoric State University")
-address: Rosenstiel School of Marine and Atmospheric Science (RSMAS) campus, Library Map and Chart Room, 4600 Rickenbacker Causeway (Locator: VK), Miami, FL 33149    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+address: Rosenstiel School of Marine and Atmospheric Science (RSMAS) campus, Library Map and Chart Room, 4600 Rickenbacker Causeway, Miami, FL 33149    # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
 country: us    # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: en   # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: 25.732467,-80.163144     # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
