--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ enddate: 2015-11-20    # use YYYY-MM-DD format like" 2015-01-02"
 instructor: ["Kate Hertweck", "Nicole Bennett"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: []     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: SKhuri@med.miami.edu    # contact email address for workshop organizer, such as "grace@hopper.org"
-etherpad:         # optional (insert the URL for your Etherpad if you're using one)
+etherpad: http://pad.software-carpentry.org/2015-11-19-umiami-R        # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
 <!--
