--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ humandate: Nov 19-20, 2015  # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: 8:30 am - 4:30 pm  # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2015-11-19  # use YYYY-MM-DD format like "2015-01-01"
 enddate: 2015-11-20    # use YYYY-MM-DD format like" 2015-01-02"
-instructor: ["Kate Hertweck", "Nicole Bennett"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Kate Hertweck", "Nichole Bennett"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: []     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: SKhuri@med.miami.edu    # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad: http://pad.software-carpentry.org/2015-11-19-umiami-R        # optional (insert the URL for your Etherpad if you're using one)
